--- a/RockPaperScissors/style.css
+++ b/RockPaperScissors/style.css
@@ -4,17 +4,23 @@
 }
 
 body{
+    background: linear-gradient(315deg,#D741A7,#3A1772, #5398BE,#F2CD5D,#DEA54B);
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
 }
 
+img{
+    mix-blend-mode: color-burn;
+}
 .container{
-    background-color: cadetblue;
+    border: 5px solid white;
+    background:transparent;
+    border-radius: 100px;
     width: 650px;
     height: 600px;
-    padding: 25px;
+    padding: 28px;
 }
 
 .title{
@@ -31,7 +37,8 @@ body{
 
 
 .iconContainer{
-    background-color: aliceblue;
+    border: 5px solid;
+    border-radius: 70px;
     width: 610px;
     height: 300px;
     display: flex;
@@ -43,13 +50,11 @@ body{
 .playerIcon{
     width: 250px;
     height: 250px;
-    border: 5px solid;
 }
 
 .comIcon{
     width: 250px;
     height: 250px;
-    border: 5px solid;
 }
 
 .details{
@@ -65,29 +70,29 @@ body{
 }
 
 button{
+    background-color:#5398BE;
     width: 250px;
     height: 35px;
     margin: 8px 0;
     font-size: 20px;
     font-weight: 600;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
 button:hover{
-    background-color: cyan;
+    background-color: #F2CD5D;
     border: 3px solid;
 }
 
 .stats{
-    background-color: grey;
     width: 250px;
-    height: 160px;
-    padding: 10px;
+    height: 150px;
+    padding: 8px;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 26px;
     text-align: center;
 }
 
 p{
-    margin: 8px;
+    margin: 5px;
 }
